--- a/resources/css/custom-border-colors.css
+++ b/resources/css/custom-border-colors.css
@@ -7,6 +7,7 @@
 .border-dark-gray     { border-color: var(--dark-gray); }
 .border-black         { border-color: var(--black); }
 .border-light-teal    { border-color: var(--light-teal); }
+.border-error         { border-color: var(--error); }
 
 .debug * { outline: 1px solid gold; }
 
@@ -23,4 +24,5 @@
   --black:         #000000;
   --light-teal:    #9fe5d5;
   --orange:        #ffc520;
+  --error:         #ff004f;
 }
