--- a/resources/css/custom-background-colors.css
+++ b/resources/css/custom-background-colors.css
@@ -5,6 +5,7 @@
 .bg-light-orange            { background-color: var(--light-orange); }
 .bg-light-lavender          { background-color: var(--light-lavender); }
 .bg-lavender                { background-color: var(--lavender); }
+.bg-lavender-dark           { background-color: var(--lavender-dark); }
 .bg-lavender-gradient-light { background-color: var(--lavender-gradient-light); }
 .bg-lavender-gradient-dark  { background-color: var(--lavender-gradient-dark); }
 .bg-too-light-lavender      { background-color: var(--too-light-lavender); }
@@ -51,6 +52,7 @@
     --light-orange:           rgb(255, 248, 229);
     --light-lavender:         rgb(202, 182, 215);
     --lavender:               rgb(175, 159, 196);
+    --lavender-dark:          rgb(144,128,166);
     --too-light-lavender:     #efebf5;
 
     --lavender-gradient-light: rgb(205, 184, 217);
