Give line-item-adding glow a fade-in
[#168393235]

Co-authored-by: Andres Pineda <andres@mayvenn.com>

--- a/resources/css/custom-interaction.css
+++ b/resources/css/custom-interaction.css
@@ -20,24 +20,17 @@
 .hoverable:hover .show-on-hover { display: block; }
 .hoverable .show-on-hover { display: none; }
 
-.line-item-fade-enter {
-    background-color: var(--teal);
+@keyframes lineItemGlow {
+    25% {
+        background-color: var(--teal);
+        color: var(--too-light-teal);
+    }
 }
 
-.line-item-fade-enter.line-item-fade-enter-active {
-    background-color: var(--too-light-teal);
-    transition: var(--color-transition);
-}
-
-.line-item-fade-appear {
-    background-color: var(--teal);
-    color: white;
-}
-
+.line-item-fade-enter.line-item-fade-enter-active,
 .line-item-fade-appear.line-item-fade-appear-active {
-    background-color: var(--too-light-teal);
-    color: initial;
-    transition: var(--color-transition);
+    animation-name: lineItemGlow;
+    animation-duration: 1300ms;
 }
 
 .slide-down-enter {
@@ -57,7 +50,6 @@
     --silver: #000000;
     --fate-white: #F8F8F8;
     --too-light-teal: #f5fcfb;
-    --color-transition: all 1000ms 300ms ease-in-out;
 }
 
 .picker-enter, .picker-leave.picker-leave-active {
