Adjust padding and margin on pdp freeinstall banner
Also styles small button to be bolder and a bit spaced out

[#168528251]

Co-authored-by: Jonathan Harford <jonathanh@mayvenn.com>

--- a/resources/css/custom-typography.css
+++ b/resources/css/custom-typography.css
@@ -17,14 +17,15 @@ h1, h2, h3, h4, h5, h6 { font-weight: var(--heading-font-weight); }
 .engrave-2 { text-shadow: 0 -1px 0 var(--darken-2); }
 
 .crush { letter-spacing: -0.05em; }
-.letter-spacing-0 { letter-spacing: 0; }
-.letter-spacing-1 { letter-spacing: 1px; }
-.letter-spacing-2 { letter-spacing: 2px; }
-.letter-spacing-3 { letter-spacing: 3px; }
-.letter-spacing-4 { letter-spacing: 4px; }
-.letter-spacing-5 { letter-spacing: 5px; }
-.letter-spacing-6 { letter-spacing: 6px; }
-.letter-spacing-7 { letter-spacing: 7px; }
+.letter-spacing-0    { letter-spacing: 0;     }
+.letter-spacing-half { letter-spacing: 0.5px; }
+.letter-spacing-1    { letter-spacing: 1px;   }
+.letter-spacing-2    { letter-spacing: 2px;   }
+.letter-spacing-3    { letter-spacing: 3px;   }
+.letter-spacing-4    { letter-spacing: 4px;   }
+.letter-spacing-5    { letter-spacing: 5px;   }
+.letter-spacing-6    { letter-spacing: 6px;   }
+.letter-spacing-7    { letter-spacing: 7px;   }
 
 .line-length { /* used on headers & paragraphs to make sure they're not too wide */
   max-width: 600px;
