--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,7 @@
 /* The CSS for the app */
 
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
+
 @import 'normalize.css';
 @import 'custom-basic.css';
 
