update line item background fade to use css
[#169325494]

--- a/resources/css/custom-interaction.css
+++ b/resources/css/custom-interaction.css
@@ -27,8 +27,7 @@
     }
 }
 
-.line-item-fade-enter.line-item-fade-enter-active,
-.line-item-fade-appear.line-item-fade-appear-active {
+.background-fade {
     animation-name: lineItemGlow;
     animation-duration: 1300ms;
 }
