WIP Upgrade carousel to react 16
- Carousel doesn't update when slides update (if they don't come in at the same time)

[#169218592]

Co-authored-by: Heather Farley <heather@mayvenn.com>

--- a/resources/css/custom-carousel.css
+++ b/resources/css/custom-carousel.css
@@ -1,3 +1,24 @@
+.tns-outer {
+    position: relative;
+}
+.tns-nav {
+    position: absolute;
+    bottom: 5%;
+    text-align: center;
+    width: 100%;
+}
+.tns-nav > [aria-controls] {
+    width: 9px;
+    height: 9px;
+    padding: 0;
+    margin: 0 5px;
+    border-radius: 50%;
+    background: #ddd;
+    border: 0;
+    opacity: 0.623529;
+}
+.tns-nav > .tns-nav-active { background: #999; }
+
 /* Taken from slick.css */
 
 .faded-inactive-slides-carousel .slick-slide {
@@ -57,6 +78,8 @@
 }
 
 /* Carousel Arrows */
+
+/* TODO: genericize away from slick names */
 
 .slick-prev { left: 0; z-index: 2; }
 .slick-next { right: 0; }
