Defer loading of tinyslider js, add tinyslider css to app.css
[#169586056]

Co-authored-by: Heather Farley <heather@mayvenn.com>

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -75,7 +75,7 @@
 
 /* Carousel */
 
-@import 'slick.css';
+@import 'tinyslider.css';
 @import 'custom-carousel.css';
 
 /* Third-party Overrides */
