--- a/resources/css/custom-layout.css
+++ b/resources/css/custom-layout.css
@@ -42,4 +42,13 @@
     --light-teal:     #9fe5d5;
     --light-lavender: rgb(202, 182, 215);
     --lavender:       rgb(175, 159, 196);
+
+    --p-color:     #4427c1;
+    --s-color:     #6bc8ad;
+    --red:         #f94941;
+    --paypal:      #49bbf0;
+    --pale-purple: #dedbe5;
+    --white:       #ffffff;
+    --cool-gray:   #eeefef;
+    --black:       #000000;
 }
