--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -145,7 +145,6 @@
     --light-teal:  #9fe5d5;
 
     --green:       #00cc00;
-    --red:         #ff0000;
 
     --navy:        #175674;
     --orange:      #ffc520;
@@ -155,19 +154,26 @@
     --light-lavender: rgb(202, 182, 215);
     --lavender:       rgb(175, 159, 196);
 
-    /* TODO FIX ALL OF THESE COLORS */
-    --white:        #ffffff;
     --light-silver: #f2f2f2; /* #f8f8f8 */
     --silver:       #dadada;
     --dark-silver:  #aaaaaa;
     --light-gray:   #ebebeb;
     --gray:         #cccccc;
     --dark-gray:    #666666;
-    --black:        #000000;
 
     --facebook-blue: #3b5998;
     --twitter-blue:  #00aced;
     --sms-green:     #1fcc23;
+
+    /* THESE ARE OUR NEW COLORS */
+    --p-color:     #4427c1;
+    --s-color:     #6bc8ad;
+    --red:         #f94941;
+    --paypal:      #49bbf0;
+    --pale-purple: #dedbe5;
+    --white:       #ffffff;
+    --cool-gray:   #eeefef;
+    --black:       #000000;
 
     --lighten-1: rgba(255, 255, 255, .125);
     --lighten-2: rgba(255, 255, 255, .375);
