--- a/resources/css/custom-background-images.css
+++ b/resources/css/custom-background-images.css
@@ -6,7 +6,7 @@
 .img-spinner           { background-image: url('/images/spinner.svg'); }
 .img-large-spinner     { background-image: url('/images/large-spinner.svg'); }
 
-.img-logo { background-image: url('/images/header_logo.svg'); }
+.img-logo { background-image: url('/images/mayvenn_logo.svg'); }
 
 .list-img-purple-checkmark { list-style-image: url('//ucarecdn.com/2560cee9-9ac7-4706-ade4-2f92d127b565/-/resize/12x/-/format/auto/iconCheckmark'); }
 
