--- a/resources/css/custom-background-images.css
+++ b/resources/css/custom-background-images.css
@@ -10,6 +10,11 @@
 
 .list-img-purple-checkmark { list-style-image: url('//ucarecdn.com/2560cee9-9ac7-4706-ade4-2f92d127b565/-/resize/12x/-/format/auto/iconCheckmark'); }
 
+.list-purple-diamond {
+    color: var(--p-color);
+    list-style-type: 'p';
+    list-style-type: "\25C6";
+}
 
 .bg-email-capture {
     background-image: url('//ucarecdn.com/5a322f42-fcdc-4302-8fef-06c27968ec98/-/format/auto/quadpaymodalRecovered');
