--- a/resources/css/custom-svg-colors.css
+++ b/resources/css/custom-svg-colors.css
@@ -10,6 +10,7 @@
 
 /* NEW COLORS */
 .stroke-p-color { stroke: var(--p-color); }
+.stroke-s-color { stroke: var(--s-color); }
 .stroke-white   { stroke: var(--white); }
 .stroke-black   { stroke: var(--black); }
 
