Don't wrap submit button input tag with an a tag
Co-authored-by: Justin Watt <justinw@mayvenn.com>

--- a/resources/css/custom-btn.css
+++ b/resources/css/custom-btn.css
@@ -1,5 +1,6 @@
 /* Inspired by Basscss Btn */
 
+/* TODO: Do we use/need this class and its overrides? */
 .btn {
   font-family: var(--button-font-family);
   font-size: var(--button-font-size);
