--- a/resources/css/custom-forms.css
+++ b/resources/css/custom-forms.css
@@ -15,12 +15,17 @@
   height: calc(var(--floating-label--input-text-height) + var(--floating-label--input-padding-y) * 2);
 }
 
-select.floating-label--input.has-value {
+.floating-label-large--input {
+    padding: var(--floating-label--input-padding-y) var(--floating-label--input-padding-x);
+    height: calc(var(--floating-label-large--input-text-height) + var(--floating-label--input-padding-y) * 2);
+}
+
+select.floating-label--input.has-value, select.floating-label-large--input.has-value {
   line-height: 1.8; /* select text can only be adjusted via line-height */
   padding-bottom: 0;
 }
 
-.floating-label--input.has-value {
+.floating-label--input.has-value, .floating-label-large--input.has-value {
   padding-top: calc(var(--floating-label--input-padding-y) * 1.5 - var(--floating-label--input-label-padding-y));
   padding-bottom: calc(var(--floating-label--input-padding-y) / 2 - var(--floating-label--input-label-padding-y));
 }
@@ -80,4 +85,6 @@ input:focus {
   --floating-label--input-padding-x: 10px;
   --floating-label--input-padding-y: 12px;
   --floating-label--input-label-padding-y: 3px;
+
+  --floating-label-large--input-text-height: 42px; /* height, not including padding */
 }
